WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27676
[WML] WMLDoElement doesn't update its RenderButton object upon attach()
https://bugs.webkit.org/show_bug.cgi?id=27676
Summary
[WML] WMLDoElement doesn't update its RenderButton object upon attach()
Nikolas Zimmermann
Reported
2009-07-25 05:26:11 PDT
WMLDoElement doesn't fire updateFromElement() calls in attach(), unlike HTMLButtonElement (which achieves this functionality by it's super-class HTMLFormControlElement). Fix that. Solves some style problems, and layout test dump results.
Attachments
Initial patch
(9.62 KB, patch)
2009-07-25 05:38 PDT
,
Nikolas Zimmermann
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2009-07-25 05:38:00 PDT
Created
attachment 33492
[details]
Initial patch
Nikolas Zimmermann
Comment 2
2009-07-25 09:35:32 PDT
Sending LayoutTests/ChangeLog Sending LayoutTests/platform/mac/fast/wml/do-element-optional-attr-expected.txt Sending LayoutTests/platform/mac/fast/wml/do-shadow-expected.txt Sending LayoutTests/platform/mac/fast/wml/do-template-expected.txt Sending LayoutTests/platform/mac/fast/wml/err-invalid-location-for-varref-expected.txt Sending LayoutTests/platform/mac/fast/wml/err-invalid-variable-name-expected.txt Sending LayoutTests/platform/mac/fast/wml/err-samename-do-expected.txt Sending WebCore/ChangeLog Sending WebCore/wml/WMLDoElement.cpp Sending WebCore/wml/WMLDoElement.h Transmitting file data .......... Committed revision 46394.
http://trac.webkit.org/changeset/46394
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug