2009-07-25  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

Reviewed by George Staikos.

        [WML] WMLDoElement doesn't update its RenderButton object upon attach()
        https://bugs.webkit.org/show_bug.cgi?id=27676

        WMLDoElement needs to implement attach() and call updateFromElement() on its associated RenderButton.
        Mimics HTMLButtonElement/HTMLFormControlElement behaviour and fixes several painting/styling issues covered by existing tests in fast/wml.

        * wml/WMLDoElement.cpp:
        (WebCore::WMLDoElement::attach):
        * wml/WMLDoElement.h:

2009-07-25  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by George Staikos.

        [WML] WMLDoElement doesn't update its RenderButton object upon attach()
        https://bugs.webkit.org/show_bug.cgi?id=27676

        Update layout test results after fixing WMLDoElement::attach() not calling updateFromElement().

        * platform/mac/fast/wml/do-element-optional-attr-expected.txt:
        * platform/mac/fast/wml/do-shadow-expected.txt:
        * platform/mac/fast/wml/do-template-expected.txt:
        * platform/mac/fast/wml/err-invalid-location-for-varref-expected.txt:
        * platform/mac/fast/wml/err-invalid-variable-name-expected.txt:
        * platform/mac/fast/wml/err-samename-do-expected.txt:



Canonical link: https://commits.webkit.org/38004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46394 268f45cc-cd09-0410-ab3c-d52691b4dbfc